[package]
name = "keyword_extraction"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
authors = ["Afonso Barracha <barracha.afonso@gmail.com>"]
publish = true
description = "Collection of algorithms for keyword extraction from text"
repository = "https://github.com/tugascript/keyword-extraction-rs"
homepage = "https://github.com/tugascript/keyword-extraction-rs"

[lib]
name = "keyword_extraction"
path = "src/lib.rs"


[dependencies]
unicode-segmentation = "1.10.1"
regex = "1.7.3"

[dev-dependencies]
stop-words = "0.7.1"
