[package]
name = "keyword_extraction"
version = "1.3.1"
edition = "2021"
rust-version = "1.69.0"
license = "LGPL-3.0-or-later"
readme = "README.md"
keywords = ["nlp", "text-extraction", "keyword-extraction"]
authors = ["Afonso Barracha <barracha.afonso@gmail.com>"]
publish = true
description = "Collection of algorithms for keyword extraction from text"
repository = "https://github.com/tugascript/keyword-extraction-rs"
homepage = "https://github.com/tugascript/keyword-extraction-rs"
documentation = "https://docs.rs/keyword_extraction"

[lib]
name = "keyword_extraction"
path = "src/lib.rs"


[dependencies]
unicode-segmentation = "1.11.0"
regex = "1.10.4"
rayon = { version = "1.9.0", optional = true }

[dev-dependencies]
stop-words = "0.8.0"

[features]
parallel = ["rayon"]
tf_idf = []
co_occurrence = []
rake = []
text_rank = []
yake = []
all = ["tf_idf", "co_occurrence", "rake", "text_rank", "yake"]

#DEFAULT
default = ["tf_idf", "rake", "text_rank", "yake"]
