[package]
name = "rake"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Afonso Barracha <barracha.afonso@gmail.com>"]
description = "Rust implementation of the RAKE algorithm"
license = "LGPL-3.0-or-later"

[lib]
name = "rake"
path = "src/lib.rs"

[dependencies]
tokenizer = { path = "../tokenizer" }